# Ocrx

./: .gitignore  CMakeLists.txt  readme.md
Ocrx/: Ocrx.hpp  OcrxOnnx.cpp
example/: example.cpp
